--- a/src/manifest.json
+++ b/src/manifest.json
@@ -8,9 +8,9 @@
     "default_popup": "index.html",
     "default_title": "auto GTC"
   },
-  "background": {
-    "service_worker": "background.js"
-  },
+//  "background": {
+//    "service_worker": "js/background.js"
+//  },
   "permissions": [
     "storage"
   ]
